[package]
name = "privacy-preserving-authentication"
version = "0.1.0"
authors = ["akakou <akama@keio.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# elliptic-curve = "0.6.6"
k256 = { version="0.5.10" }
elliptic-curve = { version="0.6.6", features=["digest", "arithmetic"] }
rand = "0.7.3"
sha2 = "0.9.2"
num-bigint = "0.3.1"
num-traits = "0.2.14"
hex-literal = "0.3.1"